# contract-data-extraction

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/actions/read-python-version/: action.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  dependabot-lockfile-sync.yml
docs/: plan.md  readme-changes-pending.md
docs/superpowers/plans/: 2026-05-11-ci-cd-scaffolding.md  2026-05-13-gemma-4-e2b-only-migration.md
docs/superpowers/specs/: 2026-05-11-ci-cd-scaffolding-design.md  2026-05-12-phase-2-ocr-spec-deviations.md  2026-05-13-phase-3-llm-spec-deviations.md
src/extraction_service/: __init__.py  __main__.py  log_config.py  logging.py  settings.py
src/extraction_service/config/: __init__.py  domain_model.py  run_config.py
src/extraction_service/domain/: __init__.py  errors.py  job.py  record.py  stage.py
src/extraction_service/llm/: __init__.py  client.py  prompt.py  retry.py  schema.py
src/extraction_service/ocr/: __init__.py  base.py  docling_engine.py  factory.py
src/extraction_service/pipeline/: __init__.py  llm_worker.py  ocr_worker.py  result_store.py  state.py  watchdog.py
tests/: conftest.py  test_smoke.py
tests/fakes/: __init__.py  fake_ocr.py  fake_ollama.py  test_fake_ocr.py  test_fake_ollama.py
tests/ocr/: __init__.py  _metrics.py  conftest.py  test_docling_engine.py  test_factory.py  test_word_recall.py
tests/pipeline/: test_llm_worker.py  test_ocr_worker.py  test_pipeline_e2e.py  test_result_store.py  test_state.py  test_watchdog.py
tests/unit/: test_domain_errors.py  test_domain_job.py  test_domain_model.py  test_domain_record.py  test_domain_stage.py  test_llm_client.py  test_llm_prompt.py  test_llm_retry.py  test_llm_schema.py  test_log_config.py  test_logging.py  test_ocr_base.py  test_run_config.py  test_settings.py
