[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extraction-service"
version = "0.1.0"
description = "Local HTTP service for German legal contract extraction"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=25.0",
    "ollama>=0.4",
    "docling>=2.20",
    "rapidocr-onnxruntime>=1.4",
    "modelscope>=1.20",
    "jsonschema>=4.23",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
extraction-service = "extraction_service.__main__:main"

[dependency-groups]
dev = [
    # Floor mirrors locked major (pytest 9.0.3); 9.0 changed ini-key handling
    # for `importmode` (see addopts comment at the bottom of this file), so 8.x
    # cannot interpret the project's test config correctly.  Convergent with
    # mypy>=2.0 (§17.14, pass 8) and pytest-asyncio>=1.0 (§17.11, pass 5).
    "pytest>=9.0",
    # Floor mirrors the locked major (1.3.0); 0.x → 1.x changed the default
    # asyncio mode and added new ini keys — >=0.24 was stale.
    "pytest-asyncio>=1.0",
    # Floor tracks the locked major (7.1.0); pytest-cov 7.0 dropped pytest 7.x
    # support and changed --cov-fail-under semantics. A fresh-machine resolve
    # could silently lock 6.x otherwise. Matches the tracks-the-locked-major
    # convention applied to pytest (>=9.0), pytest-asyncio (>=1.0), mypy (>=2.0).
    "pytest-cov>=7.0",
    # Floor tracks the locked minor (6.152.6); 6.x has no cross-major break
    # currently — the specific 6.115 floor pins a defensive lower bound below
    # which property-based test behavior has not been verified against this codebase.
    "hypothesis>=6.115",
    # Floor tracks the API surface the codebase was tested against (locked at
    # 2.1.x); mypy 2.0 introduced breaking strict-mode flag semantics — same
    # cross-major-correctness pattern as the pytest-asyncio floor fix.
    "mypy>=2.0",
    "ruff>=0.9",
    # Stub floors mirror the runtime floors in [project].dependencies so a
    # future lockfile regeneration on a fresh machine can't drift the stub
    # major version away from the runtime package the stubs cover.
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.23",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/extraction_service"]
# Hatchling already excludes __pycache__ by default — making it explicit so a
# future build-backend swap or hatchling-plugin change cannot accidentally
# ship .pyc artifacts.
exclude = ["**/__pycache__"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# EM/TRY/TCH added 2026-05-12 per Phase 1 panel review (Lens 04 + Lens 08).
# N/S added 2026-05-12 per Phase 1 panel re-run (Lens 08 + Lens 10): N catches
# pep8-naming drift (incl. N818 *Error suffix on exception classes — names
# normalised in this same pass), S catches bandit security smells.
# BLE added 2026-05-12 (Lens 05 pass-7): plan §7 "no silent exception catches"
# rule needs a linter arm. BLE001 = blind `except Exception`. Zero current
# violations (Phase 1 has no `except` blocks); covers Phase 2-6 catch-alls.
# PL (Pylint) added 2026-05-12 per pass-1 review against main (Lens 08): zero
# PL violations in src/; two test-style false positives (PLR2004 magic numbers
# in assertions set up inline; PLC0415 non-top-level imports in smoke tests
# where the import IS the behavior under test) suppressed via per-file-ignores.
# ANN added 2026-05-12 per cycle-2 review (Lens 04): flake8-annotations catches
# annotation gaps at lint time, complementing mypy's strict pass with faster
# developer feedback. Zero current violations. Defense-in-depth for later phases.
select = ["E", "F", "I", "B", "UP", "ASYNC", "PIE", "SIM", "RET", "ARG", "PTH", "TID", "T20", "RUF", "C4", "FURB", "PT", "EM", "TRY", "TCH", "N", "S", "BLE", "PL", "ANN"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # fixtures often look unused
    "EM101",    # tests legitimately raise with string literals in pytest.raises blocks
    "TRY003",   # tests' raise messages are intentionally long-form for assertion clarity
    "S101",     # `assert` IS the pytest assertion mechanism
    "S108",     # /tmp paths in test YAML strings are never opened — pure-string Pydantic Path fixtures
    "PLR2004",  # magic numbers in test assertions (e.g., `assert duration_ms == 2000`) are set up inline 2-3 lines earlier and reading them inline IS clearer than extracting a named constant
    "PLC0415",  # smoke tests intentionally use non-top-level imports — the import-inside-function IS the behavior under test
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true  # not implied by strict; catches branches mypy can prove dead
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["docling.*", "rapidocr.*", "modelscope.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
# Defense-in-depth: `init_forbid_extra` makes mypy reject
# `ContractJob(unknown_kwarg=…)` at static-check time regardless of whether
# the model's runtime model_config sets extra='forbid'. Currently the 5
# RunConfig sub-models (OcrConfig, LlmConfig, RetryConfig, PathsConfig,
# RunConfig) use extra='forbid' at runtime; this option extends the same
# restriction statically to ALL Pydantic models in the codebase including the
# frozen-but-not-extra-forbid ones (ContractJob, ContractRecord, StageError,
# StageRecord). `warn_required_dynamic_aliases` catches alias names that
# can't be resolved statically (forward-looking for Phase 5 HTTP models).
# `init_typed` closes the static-vs-runtime gap at construction sites: without
# it the plugin generates `__init__` with `Any` for all parameters, so
# `ContractJob(contract_id="not-a-uuid", ...)` passes mypy even though
# runtime Pydantic validation would reject the string. With init_typed=true
# the generated __init__ carries `contract_id: UUID`, `pdf_bytes: bytes`, etc.
init_forbid_extra = true
warn_required_dynamic_aliases = true
init_typed = true

[tool.pytest.ini_options]
# Implicit-mode async tests: function bodies marked `async def` are
# treated as coroutines without an `@pytest.mark.asyncio` decorator.
# Forward-looking for Phase 2-4 async worker tests. Paired with the
# explicit fixture-loop-scope below.
asyncio_mode = "auto"
# pytest-asyncio 1.x emits DeprecationWarning when an async fixture is created
# without an explicit loop_scope and this key is absent. Under our
# filterwarnings = ["error::DeprecationWarning"] posture that would break
# collection on the first Phase 2 async fixture. "function" matches the
# existing per-test loop-scope default.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# `--import-mode=importlib`: with `tests/__init__.py` present, pytest's default
# `prepend` mode imports test files as `tests.unit.test_*` AND can re-import
# them under the filesystem path when a file is run directly with
# `pytest path/to/test.py`. The dual-import causes silent fixture-identity bugs.
# `importlib` mode imports each test module once under a stable name. Passed via
# addopts because the pytest ini key is `importmode` (no underscore, added in
# pytest 8.1) — distinct from the CLI flag `--import-mode` and the API parameter
# `import_mode`. However, pytest 9.0.3 (pinned in this project) fires
# "Unknown config option: importmode" for that ini key, so the CLI-flag route
# through addopts is the correct spelling for this locked version.
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--import-mode=importlib",
]
# Pre-empt --strict-markers footgun: register the empty marker list so the
# first custom marker added in a later phase fails loudly until it's listed.
markers = []
# DeprecationWarnings are errors by default — a Phase 2/3 dependency that
# starts emitting deprecation noise will surface before it silently rots the
# test signal. Specific noisy deps can add narrow ignores when needed.
# PytestUnraisableExceptionWarning errors out on leaked exceptions from async
# tasks — forward-looking for Phase 2-4 worker code that owns asyncio.Tasks.
filterwarnings = [
    "error::DeprecationWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/extraction_service"]
branch = true

[tool.coverage.report]
# Inert until --cov is added to the CI pytest invocation; deferred per spec
# §17.2 (coverage of stub-only Phase 1 code is meaningless until production
# paths exist — gate will be activated when non-stub code lands).
fail_under = 80
show_missing = true
skip_empty = true
