[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "extraction-service"
version = "0.1.0"
description = "Local HTTP service for German legal contract extraction"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    # Floor tracks the locked minor (fastapi 0.x is pre-1.0 where each
    # minor routinely breaks router signatures, lifespan API, and
    # response-model behavior). Same tracks-the-locked-minor convention
    # applied to ollama / ruff / docling / uvicorn / modelscope / httpx /
    # rapidocr-onnxruntime.
    "fastapi>=0.136",
    # Floor tracks the locked minor (uvicorn 0.x is pre-1.0; an older floor
    # would permit a fresh resolve to a uvicorn that no longer ships the
    # ASGI lifespan shape FastAPI 0.136 expects).
    "uvicorn[standard]>=0.46",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=25.0",
    # Floor tracks the locked minor (0.6.2); ollama is pre-1.0 where every
    # minor is breaking (0.4→0.5: async streaming overhaul; 0.5→0.6: response
    # model type changes). Phase 3 LLM worker targets the 0.6.x async API.
    "ollama>=0.6",
    # Floor tracks the locked minor (2.93.x); docling 2.x cadences fast and
    # has cross-minor API churn (e.g., py.typed was added at 2.93). An older
    # floor like 2.20 is functionally a different library.
    "docling>=2.93",
    # Floor tracks the locked minor (1.4.x); rapidocr-onnxruntime 1.x is
    # also pre-1.0-style minor-breaking — the 1.3→1.4 boundary changed the
    # ONNX model loader interface used by docling's RapidOcrOptions plumbing.
    "rapidocr-onnxruntime>=1.4",
    # Floor tracks the locked minor (1.36.x); modelscope 1.x follows
    # pre-1.0-style minor-breaking cadence.
    "modelscope>=1.36",
    "jsonschema>=4.23",
    "pyyaml>=6.0",
    # Floor tracks the locked minor (0.28.x); httpx is pre-1.0 and the
    # 0.27→0.28 boundary changed the default transport behavior.
    "httpx>=0.28",
]

[project.scripts]
extraction-service = "extraction_service.__main__:main"

[dependency-groups]
dev = [
    # Floor mirrors locked major (pytest 9.0.3); 9.0 changed ini-key handling
    # for `importmode` (see addopts comment at the bottom of this file), so 8.x
    # cannot interpret the project's test config correctly.  Convergent with
    # mypy>=2.0 (§17.14, pass 8) and pytest-asyncio>=1.0 (§17.11, pass 5).
    "pytest>=9.0",
    # Floor mirrors the locked major (1.3.0); 0.x → 1.x changed the default
    # asyncio mode and added new ini keys — >=0.24 was stale.
    "pytest-asyncio>=1.0",
    # Floor tracks the locked major (7.1.0); pytest-cov 7.0 dropped pytest 7.x
    # support and changed --cov-fail-under semantics. A fresh-machine resolve
    # could silently lock 6.x otherwise. Matches the tracks-the-locked-major
    # convention applied to pytest (>=9.0), pytest-asyncio (>=1.0), mypy (>=2.0).
    "pytest-cov>=7.0",
    # Floor pinned at 6.115 (locked: 6.152.6); 6.x has no cross-major break
    # currently — the specific 6.115 floor pins a defensive lower bound below
    # which property-based test behavior has not been verified against this
    # codebase.
    "hypothesis>=6.115",
    # Floor tracks the API surface the codebase was tested against (locked at
    # 2.1.x); mypy 2.0 introduced breaking strict-mode flag semantics — same
    # cross-major-correctness pattern as the pytest-asyncio floor fix.
    "mypy>=2.0",
    # Floor tracks the locked minor (0.15.12); ruff uses 0.x versioning where
    # every minor is effectively a major bump. The >=0.9 floor permitted a
    # fresh-machine resolve to 0.9.x, which predates the PL and ANN rule
    # families added in cycle 2 — a 0.9.x resolve would silently drop those
    # lint gates. Same tracks-the-locked-minor convention as pytest-cov (>=7.0).
    "ruff>=0.15",
    # Stub floors mirror the runtime floors in [project].dependencies so a
    # future lockfile regeneration on a fresh machine can't drift the stub
    # major version away from the runtime package the stubs cover.
    "types-pyyaml>=6.0",
    "types-jsonschema>=4.23",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
    "detect-secrets>=1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/extraction_service"]
# Hatchling already excludes __pycache__ by default — making it explicit so a
# future build-backend swap or hatchling-plugin change cannot accidentally
# ship .pyc artifacts.
exclude = ["**/__pycache__"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# EM/TRY/TCH added 2026-05-12 per Phase 1 panel review (Lens 04 + Lens 08).
# N/S added 2026-05-12 per Phase 1 panel re-run (Lens 08 + Lens 10): N catches
# pep8-naming drift (incl. N818 *Error suffix on exception classes — names
# normalised in this same pass), S catches bandit security smells.
# BLE added 2026-05-12 (Lens 05 pass-7): plan §7 "no silent exception catches"
# rule needs a linter arm. BLE001 = blind `except Exception`. Zero current
# violations (Phase 1 has no `except` blocks); covers Phase 2-6 catch-alls.
# PL (Pylint) added 2026-05-12 per pass-1 review against main (Lens 08): zero
# PL violations in src/; two test-style false positives (PLR2004 magic numbers
# in assertions set up inline; PLC0415 non-top-level imports in smoke tests
# where the import IS the behavior under test) suppressed via per-file-ignores.
# ANN added 2026-05-12 per cycle-2 review (Lens 04): flake8-annotations catches
# annotation gaps at lint time, complementing mypy's strict pass with faster
# developer feedback. Zero current violations. Defense-in-depth for later phases.
# G added 2026-05-13 (Lens 08): flake8-logging-format catches f-string log calls
# (`logger.info(f"...")`) and %-style logger usage that bypass lazy evaluation.
# log_config.py wires `logging` into structlog's stdlib bridge; Phase 2-4
# workers will emit log lines and the structlog bridge is exactly where G004
# anti-patterns would land silently. Zero current violations — same proactive
# pattern as BLE, ANN, PL.
# DTZ added 2026-05-13 (Lens 08): flake8-datetimez catches `datetime.now()`
# without `tz=` and `datetime.utcnow()` (deprecated in 3.12, naive in semantics).
# Active datetime use sites: domain/stage.py and domain/record.py both call
# `datetime.now(UTC)` correctly today. Phase 2-4 workers will add stage-timing
# code that is exactly where DTZ violations would land silently. Zero current
# violations — same proactive pattern as G/BLE/ANN/PL.
# A added 2026-05-13: flake8-builtins catches names that shadow Python builtins
# (A001 variable, A002 argument, A003 attribute). Phase 2-4 worker code will
# introduce many new names in async-pipeline contexts where shadowing `id`,
# `type`, `format`, `input` is easy to slip past review. Zero current violations
# — same defense-in-depth pattern as G/DTZ/BLE/ANN/PL (verified via
# `uv run ruff check --select A`).
select = ["E", "F", "I", "B", "UP", "ASYNC", "PIE", "SIM", "RET", "ARG", "PTH", "TID", "T20", "RUF", "C4", "FURB", "PT", "EM", "TRY", "TCH", "N", "S", "BLE", "PL", "ANN", "G", "DTZ", "A"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",      # fixtures often look unused
    "EM101",    # tests legitimately raise with string literals in pytest.raises blocks
    "TRY003",   # tests' raise messages are intentionally long-form for assertion clarity
    "S101",     # `assert` IS the pytest assertion mechanism
    "S108",     # /tmp paths in test YAML strings are never opened — pure-string Pydantic Path fixtures
    "PLR2004",  # magic numbers in test assertions (e.g., `assert duration_ms == 2000`) are set up inline 2-3 lines earlier and reading them inline IS clearer than extracting a named constant
    "PLC0415",  # smoke tests intentionally use non-top-level imports — the import-inside-function IS the behavior under test
]
"src/extraction_service/ocr/docling_engine.py" = [
    # The Docling + modelscope import chain is heavyweight (~1.5-2 GB of ONNX
    # runtime + model weights pulled in transitively). Importing it at module
    # load time would slow every single test run, including the 130+ tests
    # that never touch real OCR. The deferred imports inside
    # `_build_default_converter` (network I/O) and `extract` (in-memory only)
    # are a deliberate cold-start optimization. Top-level imports would defeat
    # the rationale documented in the module docstring and would also break
    # `test_docling_engine_construct` which is hermetic precisely because
    # docling/modelscope are NOT imported until production code triggers them.
    "PLC0415",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true  # not implied by strict; catches branches mypy can prove dead
explicit_package_bases = true  # not implied by strict; pairs with mypy_path="src" to make package-root resolution explicit and prevent stdlib-shadow ambiguity in later phases
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# rapidocr and modelscope are genuinely stub-less (no py.typed marker);
# docling ships py.typed (verified at the locked version) so mypy resolves
# it natively — not listed here. Avoid pinning a specific docling version
# in this comment; the version moves with Dependabot bumps and the override
# list itself is the authoritative source of what is/isn't stub-less.
module = ["rapidocr.*", "modelscope.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
# Defense-in-depth: `init_forbid_extra` makes mypy reject
# `ContractJob(unknown_kwarg=…)` at static-check time regardless of whether
# the model's runtime model_config sets extra='forbid'. Currently the 5
# RunConfig sub-models (OcrConfig, LlmConfig, RetryConfig, PathsConfig,
# RunConfig) use extra='forbid' at runtime; this option extends the same
# restriction statically to ALL Pydantic models in the codebase including the
# frozen-but-not-extra-forbid ones (ContractJob, ContractRecord, StageError,
# StageRecord). `warn_required_dynamic_aliases` catches alias names that
# can't be resolved statically (forward-looking for Phase 5 HTTP models).
# `init_typed` closes the static-vs-runtime gap at construction sites: without
# it the plugin generates `__init__` with `Any` for all parameters, so
# `ContractJob(contract_id="not-a-uuid", ...)` passes mypy even though
# runtime Pydantic validation would reject the string. With init_typed=true
# the generated __init__ carries `contract_id: UUID`, `pdf_bytes: bytes`, etc.
init_forbid_extra = true
warn_required_dynamic_aliases = true
init_typed = true

[tool.pytest.ini_options]
# Implicit-mode async tests: function bodies marked `async def` are
# treated as coroutines without an `@pytest.mark.asyncio` decorator.
# Forward-looking for Phase 2-4 async worker tests. Paired with the
# explicit fixture-loop-scope below.
asyncio_mode = "auto"
# pytest-asyncio 1.x emits DeprecationWarning when an async fixture is created
# without an explicit loop_scope and this key is absent. Under our
# filterwarnings = ["error::DeprecationWarning"] posture that would break
# collection on the first Phase 2 async fixture. "function" matches the
# existing per-test loop-scope default.
asyncio_default_fixture_loop_scope = "function"
# Symmetric companion to asyncio_default_fixture_loop_scope: pytest-asyncio 1.x
# may warn when this key is absent and async tests run. Under our
# filterwarnings = ["error::DeprecationWarning"] posture that would immediately
# break CI. "function" matches the per-test loop-scope default.
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
# `--import-mode=importlib`: with `tests/__init__.py` present, pytest's default
# `prepend` mode imports test files as `tests.unit.test_*` AND can re-import
# them under the filesystem path when a file is run directly with
# `pytest path/to/test.py`. The dual-import causes silent fixture-identity bugs.
# `importlib` mode imports each test module once under a stable name. Passed via
# addopts because the pytest ini key is `importmode` (no underscore, added in
# pytest 8.1) — distinct from the CLI flag `--import-mode` and the API parameter
# `import_mode`. However, pytest 9.0.3 (pinned in this project) fires
# "Unknown config option: importmode" for that ini key, so the CLI-flag route
# through addopts is the correct spelling for this locked version.
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--import-mode=importlib",
]
# Pre-empt --strict-markers footgun: register markers so unknown ones fail
# loudly under --strict-markers. `slow` marks tests that run real OCR against
# local sample PDFs (~2-10s per page on M4 CPU); exclude with `-m "not slow"`
# during fast-feedback dev runs. CI auto-skips them: the parametrise hook in
# tests/ocr/conftest.py yields zero cases when $EXTRACTION_OCR_SAMPLES_DIR
# is unset (the CI default), so the marker filter is belt-and-braces, not
# the load-bearing skip — see ci.yml's `-m "not slow"` flag for that.
markers = [
    "slow: real-OCR tests that require local sample PDFs via $EXTRACTION_OCR_SAMPLES_DIR; not for fast-feedback runs",
]
# DeprecationWarnings are errors by default — a Phase 2/3 dependency that
# starts emitting deprecation noise will surface before it silently rots the
# test signal. Specific noisy deps can add narrow ignores when needed.
# PytestUnraisableExceptionWarning errors out on leaked exceptions from async
# tasks — forward-looking for Phase 2-4 worker code that owns asyncio.Tasks.
filterwarnings = [
    "error::DeprecationWarning",
    "error::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/extraction_service"]
branch = true
# Drop `if TYPE_CHECKING:` blocks from the coverage denominator — the body
# of these blocks is annotation-only and never executes at runtime; counting
# them as uncovered branches inflates the miss count without diagnostic
# value. Standard pattern for projects that use TYPE_CHECKING heavily.
exclude_lines = ["if TYPE_CHECKING:"]

[tool.coverage.report]
# Coverage gate is LIVE: ci.yml `Tests` step passes `--cov` and pytest-cov
# enforces this `fail_under` threshold from here. Single source of truth —
# do NOT also pass `--cov-fail-under=N` on the CLI; that silently overrides
# the config value and the pyproject value becomes a lie if it's ever
# changed without updating ci.yml in lockstep.  Phase 0.5 §17.2 originally
# deferred the gate "until non-stub code lands"; Phase 2 ships non-stub
# OCR code (commit c6550c8 activated --cov), so the deferral is resolved.
fail_under = 80
show_missing = true
skip_empty = true
